--- a/index.html
+++ b/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .menu_ul {
+            list-style-type: none;
+            text-align: center;
+            font-size: 30px;
+            margin: 0;
+            padding: 0;
+        }
+
+        .menu_ul li {
+            display: inline;
+        }
+
+        .menu_ul a {
+            text-decoration: none;
+            background-color: darksalmon;
+        }
+
+        .menu_ul a:hover {
+            background-color: hotpink;
+        }
+    </style>
 </head>
+
 <body>
-    <ul>
-        <li><a href="#utama">Laman Utama</a></li>
-        <li><a href="#produk">Senarai Produk</a></li>
-        <li><a href="#tempah">Borang Tempahan</a></li>
-        <li><a href="#hubungi">Hubungi Kami</a></li>
+    <ul class="menu_ul">
+        <li class="menu_ul li"><a href="#utama">Laman Utama</a></li>
+        <li class="menu_ul li"><a href="#produk">Senarai Produk</a></li>
+        <li class="menu_ul li"><a href="#tempah">Borang Tempahan</a></li>
+        <li class="menu_ul li"><a href="#hubungi">Hubungi Kami</a></li>
     </ul>
-    <h1>Buat Menu</h1>
+
 </body>
+
 </html>
