--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             background-color: darksalmon;
         }
 
-        
+        .menu_ul a:hover {
+            background-color: hotpink;
+        }
     </style>
 </head>
 
